Borrando archivos y colocando animaciones al logo

--- a/html/profile.html
+++ b/html/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi perfil</title>
 
-    <link rel=" stylesheet " href="css/font/flaticon.css ">
+    <!-- <link rel=" stylesheet " href="css/font/flaticon.css "> -->
 
     <!-- logo de pestaña  -->
     <link rel="icon" href="../assets/img/logo-pestaña.ico">
@@ -28,7 +28,7 @@
             <a href="../index.html" class="inicio ">Inicio</a>
         </div> -->
         <div class="header1 ">
-            <a href="../index.html" class="inicio ">Tienda</a>
+            <a href="../index.html" rel="noopener" class="inicio ">Tienda</a>
         </div>
         <!-- <div class="header1 ">
             <a href="blogs.html" class="inicio ">Mi Blog</a>
@@ -43,7 +43,7 @@
         <div class="presentacion ">
 
             <div class="img ">
-                <img class="img-photo " src="../assets/img/Desarrollador.jpg " alt="Foto de desarrollador">
+                <img class="img-photo " src="../assets/img/developer.jpg" alt="Foto de desarrollador">
             </div>
 
             <div class=" descripcion ">
