--- a/index.html
+++ b/index.html
@@ -132,27 +132,27 @@
                     <div class="accesorio-celular">
                         <h3>Tarjeta de memoria 16 gigas</h3>
                         <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cargador Tipo V</h3>
                         <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Funda de silicona para iPhone</h3>
                         <img src="assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cable Carga Rápida Tipo V</h3>
                         <img src="assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cable USB Carga Rápida para iPhone</h3>
                         <img src="assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
 
                 </div>
@@ -165,48 +165,48 @@
                     <div class="accesorio-pc">
                         <h3>Cable USB 3.0 extensor </h3>
                         <img src="assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Cargador Lenovo Serie G-40</h3>
                         <img src="assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>USB 3.0 16 gigas</h3>
                         <img src="assets/img/ArticulosChina/memoriausb3.0/1.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Micr&oacute;fono</h3>
                         <img src="assets/img/ArticulosChina/Microfono/1.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Memoria RAM 2gb</h3>
                         <img src="assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
 
                     <div class="accesorio-pc">
                         <h3>Teclado Genius básico</h3>
                         <img src="assets/img/ArticulosChina/teclado/2.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Adaptador USB para WiFi</h3>
                         <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Cargador port&aacute;til para celulares</h3>
                         <img src="assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse inal&aacute;mbrico</h3>
                         <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <!-- <div class="accesorio-pc">
                         <h3>Mouse LogiTech al&aacute;mbrico</h3>
@@ -525,9 +525,10 @@
         <div class="social-desa">
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
+            <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">
+                <img src="assets/img/facebook.png" alt="Imagen de red social Facebook"></a>
             <!-- <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a> -->
-            <a href="https://wa.me/c/573174503604" target="_blank">
+            <a href="https://wa.me/c/573174503604" rel="noopener" target="_blank">
                 <img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp">
             </a>
         </div>
@@ -536,7 +537,7 @@
             <h3>Fuentes:</h3>
             <p>
                 Icons made by
-                <a href="https://www.freepik.com" target="_blank" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com
+                <a href="https://www.freepik.com" rel="noopener" target="_blank" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" rel="noopener" target="_blank" title="Flaticon">www.flaticon.com
                 </a>
             </p>
         </div>
