Reorganizando código para eliminar secciones repetidas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!-- subiendo pagina  -->
+    
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
     <header class="header">
@@ -128,6 +128,38 @@
                 <div class="titulo" id="accesorios-celular">
                     <h2>Accesorios para celulares</h2>
                 </div>
+                
+                <div class="accesorio">
+
+                    <div class="accesorio-celular">
+                        <h3>Tarjeta de memoria 16 gigas</h3>
+                        <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                    </div>
+                    <div class="accesorio-celular">
+                        <h3>Cargador Tipo V</h3>
+                        <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                    </div>
+                    <div class="accesorio-celular">
+                        <h3>Funda de silicona para iPhone</h3>
+                        <img src="assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                    </div>
+                    <div class="accesorio-celular">
+                        <h3>Cable Carga Rápida Tipo V</h3>
+                        <img src="assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                    </div>
+                    <div class="accesorio-celular">
+                        <h3>Cable USB Carga Rápida para iPhone</h3>
+                        <img src="assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
+                    </div>
+
+                </div>
+
+
                 <div class="celulares">
 
                     <div class="accesorio-celular">
