--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    
+
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
     <header class="header">
@@ -125,118 +125,87 @@
         <div class="mi_trabajo">
 
             <div class="accesorios">
+                <!-- accesorios_celulares  -->
                 <div class="titulo" id="accesorios-celular">
                     <h2>Accesorios para celulares</h2>
                 </div>
-                
                 <div class="accesorio">
 
-                    <div class="accesorio-celular">
+                    <div class="accesorio-tipo">
                         <h3>Tarjeta de memoria 16 gigas</h3>
                         <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-celular">
+                    <div class="accesorio-tipo">
                         <h3>Cargador Tipo V</h3>
                         <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-celular">
+                    <div class="accesorio-tipo">
                         <h3>Funda de silicona para iPhone</h3>
                         <img src="assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
-                    <div class="accesorio-celular">
+                    <div class="accesorio-tipo">
                         <h3>Cable Carga Rápida Tipo V</h3>
                         <img src="assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
-                    <div class="accesorio-celular">
+                    <div class="accesorio-tipo">
                         <h3>Cable USB Carga Rápida para iPhone</h3>
                         <img src="assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
 
                 </div>
-
-
-                <div class="celulares">
-
-                    <div class="accesorio-celular">
-                        <h3>Tarjeta de memoria 16 gigas</h3>
-                        <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
-                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
-                    </div>
-                    <div class="accesorio-celular">
-                        <h3>Cargador Tipo V</h3>
-                        <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
-                    </div>
-                    <div class="accesorio-celular">
-                        <h3>Funda de silicona para iPhone</h3>
-                        <img src="assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
-                    </div>
-                    <div class="accesorio-celular">
-                        <h3>Cable Carga Rápida Tipo V</h3>
-                        <img src="assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
-                    </div>
-                    <div class="accesorio-celular">
-                        <h3>Cable USB Carga Rápida para iPhone</h3>
-                        <img src="assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
-                    </div>
-
-                </div>
-
+                <!-- accesorios_computadores  -->
                 <div class="titulo" id="accesorios-laptop">
                     <h2>Accesorios para computadores</h2>
                 </div>
-                <div class="pc">
+                <div class="accesorio">
 
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
                         <img src="assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Cargador Lenovo Serie G-40</h3>
                         <img src="assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>USB 3.0 16 gigas</h3>
                         <img src="assets/img/ArticulosChina/memoriausb3.0/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Micr&oacute;fono</h3>
                         <img src="assets/img/ArticulosChina/Microfono/1.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Memoria RAM 2gb</h3>
                         <img src="assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
 
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Teclado Genius básico</h3>
                         <img src="assets/img/ArticulosChina/teclado/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Adaptador USB para WiFi</h3>
                         <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank" rel="noopener">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Cargador port&aacute;til para celulares</h3>
                         <img src="assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Mouse inal&aacute;mbrico</h3>
                         <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
@@ -246,40 +215,41 @@
                         <img src="assets/img/ArticulosCali/MouseM90/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div> -->
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Router TP-Link WR840 </h3>
                         <img src="assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
-                    <div class="accesorio-pc">
+                    <div class="accesorio-tipo">
                         <h3>Router TP-Link WR940N </h3>
                         <img src="assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                 </div>
-                <!-- 
+
+                <!-- libros  -->
                 <div class="titulo" id="books">
                     <h2>Libros 2da</h2>
                 </div>
-                <div class="libros">
+                <div class="accesorio">
 
-                    <div class="libros__catalogo">
+                    <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
                         <img src="../assets/img/accesorios/books/1.svg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
-                    <div class="libros__catalogo">
+                    <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
                         <img src="../assets/img/accesorios/books/2.svg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
-                    <div class="libros__catalogo">
+                    <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
                         <img src="../assets/img/accesorios/books/3.svg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
 
-                </div> -->
+                </div>
             </div>
             <div class="formateo" id="formateo">
                 <div class="title">
