Animación al texto de mi perfil

--- a/index.html
+++ b/index.html
@@ -235,17 +235,17 @@
 
                     <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
-                        <img src="../assets/img/accesorios/books/1.svg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="assets/img/accesorios/books/1.svg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
-                        <img src="../assets/img/accesorios/books/2.svg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="assets/img/accesorios/books/2.svg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
                         <h3>Cable USB 3.0 extensor </h3>
-                        <img src="../assets/img/accesorios/books/3.svg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="assets/img/accesorios/books/3.svg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
 
