Libros agregados a la página

--- a/index.html
+++ b/index.html
@@ -234,23 +234,29 @@
                 <div class="accesorio">
 
                     <div class="accesorio-tipo">
-                        <h3>Cable USB 3.0 extensor </h3>
-                        <img src="assets/img/accesorios/books/1.svg" alt="" title="Antena TP-Link USB wifi">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <h3>C&oacute;mo programar en Java</h3>
+                        <img src="assets/img/books/1.jpeg" alt="Cómo programar en Java">
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
-                        <h3>Cable USB 3.0 extensor </h3>
-                        <img src="assets/img/accesorios/books/2.svg" alt="" title="Antena TP-Link USB wifi">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <h3>Fundamentos de Circuitos el&eacute;ctricos</h3>
+                        <img src="assets/img/books/2.jpeg" alt="Fundamentos de Circuitos eléctricos">
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-tipo">
-                        <h3>Cable USB 3.0 extensor </h3>
-                        <img src="assets/img/accesorios/books/3.svg" alt="" title="Antena TP-Link USB wifi">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+                        <h3>Electricidad y Electr&oacute;nica</h3>
+                        <img src="assets/img/books/3.jpeg" alt="Electricidad y Electrónica">
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
                     </div>
-
+                    <div class="accesorio-tipo">
+                        <h3>F&iacute;sica Vol 1</h3>
+                        <img src="assets/img/books/4.jpeg" alt="Fisica Vol 1">
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                    </div>
                 </div>
             </div>
+
+
             <div class="formateo" id="formateo">
                 <div class="title">
                     <h2>Formateo</h2>
