Colocando enlaces siempre visibles desde vista 1024px

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
     </script>
 
     <footer>
-
+        <!-- colocando footer siempre visible en 1024px -->
         <div class="info-desa">
             <h3>Desarrollado por Juli&aacute;n España</h3>
             <h3>T&eacute;cnico en sistemas - SENA</h3>
