Cuadrando botones para control de imágenes

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
                             <!-- contenedor de control de imagenes  -->
                             <ul class="deslizador-menu">
                                 <li>
-                                    <a href="#deslizador1">1</a>
+                                    <a class="boton" href="#deslizador1"></a>
                                 </li>
                                 <li>
-                                    <a href="#deslizador2">2</a>
+                                    <a href="#deslizador2"></a>
                                 </li>
                                 <li>
-                                    <a href="#deslizador3">3</a>
+                                    <a href="#deslizador3"></a>
                                 </li>
                             </ul>
 
