Volviendo al diseño sin botones

--- a/index.html
+++ b/index.html
@@ -124,48 +124,13 @@
                 <div class="accesorio">
                     <div class="accesorio-tipo">
                         <h3>Tarjeta de memoria 16 gigas</h3>
-                        <div class="accesorio-images">
-                            <!-- contenedor de imagenes  -->
-                            <ul class="deslizador">
-                                <li id="deslizador1">
-                                    <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi" />
-                                </li>
-                                <li id="deslizador2">
-                                    <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi" />
-                                </li>
-                                <li id="deslizador3">
-                                    <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi" />
-                                </li>
-                            </ul>
-
-                            <!-- contenedor de control de imagenes  -->
-                            <ul class="deslizador-menu">
-                                <li>
-                                    <a class="boton" href="#deslizador1"></a>
-                                </li>
-                                <li>
-                                    <a href="#deslizador2"></a>
-                                </li>
-                                <li>
-                                    <a href="#deslizador3"></a>
-                                </li>
-                            </ul>
-                        </div>
-
+                        <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi" />
+                        <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a>
+                    </div>
+                    <div class="accesorio-tipo">
+                        <h3>Cargador Tipo V</h3>
+                        <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="" />
                         <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">Comprar</a
-              >
-            </div>
-            <div class="accesorio-tipo">
-              <h3>Cargador Tipo V</h3>
-              <img
-                src="assets/img/Otros artículos/CargadorMotorla/2.png"
-                alt=""
-              />
-              <a
-                href="https://www.facebook.com/alex.rio20/"
-                rel="noopener"
-                target="_blank"
-                >Comprar</a
               >
             </div>
             <div class="accesorio-tipo">
