--- a/index.html
+++ b/index.html
@@ -372,12 +372,15 @@
         <div class="social-desa">
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
-            <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">
-                <img src="assets/img/facebook.png" alt="Imagen de red social Facebook" /></a>
+
+            <div class="redes">
+                <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">
+                    <img src="assets/img/network/facebook.svg" alt="Imagen de red social Facebook" /></a>
+                <a href="https://wa.me/c/573174503604" rel="noopener" target="_blank">
+                    <img src="assets/img/network/whatsapp.svg" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp" />
+                </a>
+            </div>
             <!-- <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a> -->
-            <a href="https://wa.me/c/573174503604" rel="noopener" target="_blank">
-                <img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp" />
-            </a>
         </div>
 
         <div class="fuentes">
