Agregué Telegram a los enlaces

--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@
             <h3>julii1295@gmail.com</h3>
 
             <div class="redes">
-                <a href="https://www.facebook.com/alex.rio20/" rel="noopener" target="_blank">
-                    <img src="assets/img/network/facebook.svg" alt="Imagen de red social Facebook" /></a>
                 <a href="https://wa.me/c/573174503604" rel="noopener" target="_blank">
-                    <img src="assets/img/network/whatsapp.svg" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp" />
+                    <img src="assets/img/network/whatsapp.svg" alt="Whatsapp" />
+                </a>
+                <a href="https://wa.me/c/573174503604" rel="noopener" target="_blank">
+                    <img src="assets/img/network/telegram.svg" alt="Telegram" />
                 </a>
             </div>
-            <!-- <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a> -->
         </div>
 
         <div class="fuentes">
