--- a/index.html
+++ b/index.html
@@ -87,7 +87,23 @@
 
                     <div class="slide first">
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación" />
+
+                        <!-- control de anuncios -->
+                        <div class="navigation-auto">
+                            <div class="auto-btn1"></div>
+                            <!-- <div class="auto-btn2"></div>
+                            <div class="auto-btn3"></div>
+                            <div class="auto-btn4"></div> -->
+                        </div>
+
+                        <div class="navigation-manual">
+                            <label for="radio1" class="manual-btn"></label>
+                            <!-- <label for="radio2" class="manual-btn"></label>
+                            <label for="radio3" class="manual-btn"></label>
+                            <label for="radio4" class="manual-btn"></label> -->
+                        </div>
                     </div>
+
                     <!-- <div class="slide">
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div>
@@ -98,19 +114,19 @@
                         <img src="assets/img/presentacion/presentation_1.png" alt="Imagen de presentación">
                     </div> -->
 
-                    <div class="navigation-auto">
-                        <div class="auto-btn1"></div>
-                        <!-- <div class="auto-btn2"></div>
+                    <!-- <div class="navigation-auto">
+                        <div class="auto-btn1"></div> -->
+                    <!-- <div class="auto-btn2"></div>
                         <div class="auto-btn3"></div>
                         <div class="auto-btn4"></div> -->
-                    </div>
+                </div>
 
-                    <div class="navigation-manual">
-                        <label for="radio1" class="manual-btn"></label>
-                        <!-- <label for="radio2" class="manual-btn"></label>
+                <!-- <div class="navigation-manual">
+                        <label for="radio1" class="manual-btn"></label> -->
+                <!-- <label for="radio2" class="manual-btn"></label>
                         <label for="radio3" class="manual-btn"></label>
                         <label for="radio4" class="manual-btn"></label> -->
-                    </div>
+                </div>
                 </div>
             </section>
         </section>
